# CHOOZ

./: .gitignore  .pre-commit-config.yaml
.github/workflows/: cd.yml  ci-backend.yml
backend/: .dockerignore  .env.example  .gitignore  Makefile  README.md  manage.py  pyproject.toml
backend/api/: admin.py  graphql_schema.py  middleware.py  models.py  urls.py  views.py
backend/api/graphql/: errors.py  schema.py  types.py
backend/api/graphql/auth/: google.py  mutations.py  queries.py  yandex.py
backend/api/graphql/events/: mutations.py  queries.py  service.py
backend/api/graphql/wish_items/: mutations.py  queries.py  service.py
backend/api/migrations/: 0001_initial.py  0002_googleaccount.py  0003_wishitem_owner.py  0004_yandexaccount.py  0005_wishitem_image.py  0006_remove_wishitem_image_wishitem_image_key_event.py  0007_event_link_wishitem_currency_wishitem_link_and_more.py  0008_event_notify_enabled_event_repeat_yearly.py
backend/api/storage/: minio.py
backend/config/: settings.py  urls.py
backend/docker/: Caddyfile  Dockerfile  Dockerfile.dockerignore  compose.dev.yml  compose.full.yml  compose.prod.yml  compose.stage.yml  compose.yml
mobile/Chooz/: Project.swift  apollo-codegen-config.json  generate.sh
mobile/Chooz/Chooz/Sources/: AppDelegate.swift  ChoozApp.swift  Launch Screen.storyboard
mobile/Chooz/Chooz/Sources/Application/: AppBootstraper.swift  AppContainer.swift  AppDelegate.swift  AppRouter.swift  SceneDelegate.swift
mobile/Chooz/Chooz/Sources/Config/: AppConfig.swift
mobile/Chooz/Chooz/Sources/Coordinators/: AppCoordinator.swift  BaseCoordinator.swift
mobile/Chooz/Chooz/Sources/GraphQL/: schema.graphqls
mobile/Chooz/Chooz/Sources/GraphQL/operations/: AuthOperations.graphql  CalendarOperations.graphql  WishlistOperations.graphql
mobile/Chooz/Chooz/Sources/Screens/Authorization/: AuthScreenFactory.swift  AuthScreenViewModelImpl.swift  AuthorizationFactory.swift  AuthorizationInteractor.swift  AuthorizationRouter.swift  AuthorizationView.swift  (+1 more)
mobile/Chooz/Chooz/Sources/Services/: UserDefaultsService.swift
mobile/Chooz/Chooz/Sources/Settings/: SettingsFactory.swift  SettingsView.swift  SettingsViewModel.swift
mobile/Chooz/Chooz/Sources/UIToolbox/: AddLinkView.swift  HorizontalLine.swift  MainActionButton.swift  ScaleButtonStyle.swift
mobile/Chooz/Chooz/Tests/: ChoozTests.swift
mobile/Chooz/Tuist/: Package.resolved  Package.swift
mobile/tools/graphql/: apollo_codegen.sh
mobile/tools/images/: convert_images.sh
(+237 files in other folders)
